<!--
  ~ Copyright (C) 2018 Google Inc.
  ~
  ~ Licensed under the Apache License, Version 2.0 (the "License");
  ~ you may not use this file except in compliance with the License.
  ~ You may obtain a copy of the License at
  ~
  ~     http://www.apache.org/licenses/LICENSE-2.0
  ~
  ~ Unless required by applicable law or agreed to in writing, software
  ~ distributed under the License is distributed on an "AS IS" BASIS,
  ~ WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~ See the License for the specific language governing permissions and
  ~ limitations under the License.
  -->

<resources>
    <!-- Title of app -->
    <string name="app_name">Calculator</string>
    <string name="action_settings">Settings</string>
    <string name="recipe">Recipe</string>
    <string name="GeneralCalculator">GeneralCalculator</string>
    <!-- Hint for first operand EditText -->
    <string name="type_operand_one_hint">Type Operand 1</string>

    <!-- Hint for second operand EditText -->
    <string name="type_operand_two_hint">Type Operand 2</string>

    <!-- Button label for add operation -->
    <string name="add_operation_text">+</string>

    <!-- Button label for subtract operation -->
    <string name="sub_operation_text">-</string>

    <!-- Button label for divide operation -->
    <string name="div_operation_text">÷</string>

    <!-- Button label for mul operation -->
    <string name="mul_operation_text">×</string>

    <string name="pow_operation_text">^</string>

    <string name="clear_operation_text">C</string>

    <string name="dot_operation_text">.</string>

    <string name="percent_operation_text">%</string>

    <string name="equal_operation_text">=</string>

    <!-- Message for textview in case of errors  -->
    <string name="computationError">Error</string>

    <string name="brackets_operation_text">()</string>
    <string name="one_number_text">1</string>
    <string name="two_number_text">2</string>
    <string name="three_number_text">3</string>
    <string name="four_number_text">4</string>
    <string name="five_number_text">5</string>
    <string name="six_number_text">6</string>
    <string name="seven_number_text">7</string>
    <string name="eight_number_text">8</string>
    <string name="nine_number_text">9</string>
    <string name="zero_number_text">0</string>
    <string name="base2">(2)</string>
    <string name="base10">(10)</string>
    <string name="base8">(8)</string>
    <string name="base16">(16)</string>


</resources>
