<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".BaseconvertCalculator">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingBottom="@dimen/activity_vertical_margin"
        tools:context=".MainActivity"
        tools:layout_editor_absoluteX="-161dp"
        tools:layout_editor_absoluteY="-81dp">
        <TextView
            android:id="@+id/operation_result_text_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/activity_vertical_margin" />

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="315dp">


            <Button
                android:id="@+id/operation_clear_btn"
                android:layout_width="wrap_content"
                android:layout_height="60dp"
                android:text="@string/clear_operation_text" />

            <Button
                android:id="@+id/base2_btn"
                android:layout_width="wrap_content"
                android:layout_height="60dp"
                android:layout_toEndOf="@id/operation_clear_btn"
                android:layout_toRightOf="@id/operation_clear_btn"
                android:text="@string/base2" />

            <Button
                android:id="@+id/base10_btn"
                android:layout_width="wrap_content"
                android:layout_height="60dp"
                android:layout_toEndOf="@+id/base2_btn"
                android:layout_toRightOf="@+id/base2_btn"
                android:text="@string/base10" />

            <Button
                android:id="@+id/operation_equal_btn"
                android:layout_width="wrap_content"
                android:layout_height="60dp"
                android:layout_toEndOf="@+id/base10_btn"
                android:layout_toRightOf="@+id/base10_btn"
                android:text="@string/equal_operation_text" />

            <Button
                android:id="@+id/number_one_btn"
                android:layout_width="wrap_content"
                android:layout_height="60dp"
                android:layout_below="@id/operation_clear_btn"
                android:text="@string/one_number_text" />

            <Button
                android:id="@+id/number_two_btn"
                android:layout_width="wrap_content"
                android:layout_height="60dp"
                android:layout_below="@id/operation_clear_btn"
                android:layout_toEndOf="@id/operation_clear_btn"
                android:layout_toRightOf="@id/operation_clear_btn"
                android:text="@string/two_number_text" />

            <Button
                android:id="@+id/number_three_btn"
                android:layout_width="wrap_content"
                android:layout_height="60dp"
                android:layout_below="@id/operation_clear_btn"
                android:layout_toEndOf="@id/number_two_btn"
                android:layout_toRightOf="@id/number_two_btn"
                android:text="@string/three_number_text" />

            <Button
                android:id="@+id/to2_btn"
                android:layout_width="wrap_content"
                android:layout_height="60dp"
                android:layout_below="@id/operation_clear_btn"
                android:layout_toEndOf="@id/number_three_btn"
                android:layout_toRightOf="@id/number_three_btn"
                android:text="@string/base2" />

            <Button
                android:id="@+id/number_four_btn"
                android:layout_width="wrap_content"
                android:layout_height="60dp"
                android:layout_below="@id/number_one_btn"
                android:text="@string/four_number_text" />

            <Button
                android:id="@+id/number_five_btn"
                android:layout_width="wrap_content"
                android:layout_height="60dp"
                android:layout_below="@id/number_one_btn"
                android:layout_toEndOf="@id/number_one_btn"
                android:layout_toRightOf="@id/number_one_btn"
                android:text="@string/five_number_text" />

            <Button
                android:id="@+id/number_six_btn"
                android:layout_width="wrap_content"
                android:layout_height="60dp"
                android:layout_below="@id/number_one_btn"
                android:layout_toEndOf="@id/number_five_btn"
                android:layout_toRightOf="@id/number_five_btn"
                android:text="@string/six_number_text" />

            <Button
                android:id="@+id/to8_btn"
                android:layout_width="wrap_content"
                android:layout_height="60dp"
                android:layout_below="@id/number_one_btn"
                android:layout_toEndOf="@id/number_six_btn"
                android:layout_toRightOf="@id/number_six_btn"
                android:text="@string/base8" />

            <Button
                android:id="@+id/number_seven_btn"
                android:layout_width="wrap_content"
                android:layout_height="60dp"
                android:layout_below="@id/number_four_btn"
                android:text="@string/seven_number_text" />

            <Button
                android:id="@+id/number_eight_btn"
                android:layout_width="wrap_content"
                android:layout_height="60dp"
                android:layout_below="@id/number_four_btn"
                android:layout_toEndOf="@id/number_one_btn"
                android:layout_toRightOf="@id/number_one_btn"
                android:text="@string/eight_number_text" />

            <Button
                android:id="@+id/number_nine_btn"
                android:layout_width="wrap_content"
                android:layout_height="60dp"
                android:layout_below="@id/number_four_btn"
                android:layout_toEndOf="@id/number_five_btn"
                android:layout_toRightOf="@id/number_five_btn"
                android:text="@string/nine_number_text" />

            <Button
                android:id="@+id/to10_btn"
                android:layout_width="wrap_content"
                android:layout_height="60dp"
                android:layout_below="@id/number_four_btn"
                android:layout_toEndOf="@id/number_six_btn"
                android:layout_toRightOf="@id/number_six_btn"
                android:text="@string/base10" />

            <Button
                android:id="@+id/none_btn1"
                android:layout_width="wrap_content"
                android:layout_height="60dp"
                android:layout_below="@id/number_seven_btn" />

            <Button
                android:id="@+id/number_zero_btn"
                android:layout_width="wrap_content"
                android:layout_height="60dp"
                android:layout_below="@id/number_seven_btn"
                android:layout_toEndOf="@id/number_one_btn"
                android:layout_toRightOf="@id/number_one_btn"
                android:text="@string/zero_number_text" />

            <Button
                android:id="@+id/none_btn2"
                android:layout_width="wrap_content"
                android:layout_height="60dp"
                android:layout_below="@id/number_seven_btn"
                android:layout_toEndOf="@id/number_five_btn"
                android:layout_toRightOf="@id/number_five_btn" />

            <Button
                android:id="@+id/to16_btn"
                android:layout_width="wrap_content"
                android:layout_height="60dp"
                android:layout_below="@id/number_seven_btn"
                android:layout_toEndOf="@id/number_six_btn"
                android:layout_toRightOf="@id/number_six_btn"
                android:text="@string/base16" />

        </RelativeLayout>


    </LinearLayout>

</android.support.constraint.ConstraintLayout>